# my_robot

./: .gitignore  README.md
referee_console/: package.xml  setup.cfg  setup.py
referee_console/referee_console/: mission_autorace_2023_referee.py
robot_app/: CMakeLists.txt  package.xml
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: autorace_2023.rviz  costmap.yaml  diff_drive.rviz  mapper.yaml  robot_bridge.yaml  robot_bridge_nav.yaml
robot_bringup/hooks/: robot_bringup.sh.in
robot_bringup/launch/: autorace_2023.launch.py  diff_drive.launch.py  nav_test.launch.py
robot_bringup/worlds/: course.sdf  obstacle.sdf  obstacle_tall.sdf
robot_bringup/worlds/actor/: actor.dae  actor.sdf
robot_bringup/worlds/intersection/: left.sdf  right.sdf
robot_bringup/worlds/materials/: pedestrian.sdf
robot_bringup/worlds/suv/: suv.dae  suv.sdf
robot_bringup/worlds/traffic_light/: green.sdf  red.sdf  yellow.sdf
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/: body.stl  body_center.stl  body_center_sim.stl  d455_sim.stl  depth.urdf.xacro  gazebo.urdf.xacro  left_tire_sim.stl  lidar.urdf.xacro  lidar_sim.stl  right_tire_sim.stl  robot.urdf.xacro  wheelpin_front.stl  wheelpin_rear.stl
